syntax = "proto3";

option csharp_namespace = "Tauron.Application.Deployment.Server.Services";

package Tauron.Application.Deployment.Server.Services;

message GenericResult {
	string ErrorMessage = 1;
	bool Ok = 2;
}